--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_pos
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -44,19 +44,19 @@ dependencies:
   image: ^4.2.0
   image_picker: ^1.0.5
   intl: ^0.19.0
+  mobile_scanner: ^5.2.1
   open_file_plus: ^3.4.1+1
   pdf: ^3.11.1
   permission_handler: ^11.3.1
-  print_bluetooth_thermal: ^1.0.9
+  print_bluetooth_thermal: ^1.1.3
   shared_preferences: ^2.2.2
   sqflite: ^2.3.0
   widgets_to_image: ^1.0.0
-  mobile_scanner: ^5.2.1
 
 dev_dependencies:
   build_runner: ^2.4.7
   flutter_gen_runner: ^5.3.2
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.4.6
@@ -70,7 +70,6 @@ flutter_gen:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
